# druglist-bot

./: .gitignore  Dockerfile  README.md  cloudbuild.yml  docker-compose.yml  manage.py  pyproject.toml
bot/: admin.py  models.py
bot/management/commands/: bot.py  compare_data.py  fetch_data.py
bot/migrations/: 0001_initial.py  0002_auto_20210805_1726.py
med_list/: asgi.py  settings.py  urls.py  wsgi.py
