[tool.poetry]
name = "med_list2"
version = "0.1.0"
description = "Telegram bot with unworking drugs"
authors = ["Voronwe <Voronwe.S@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
psycopg2 = "^2.9.1"
python-telegram-bot = "^13.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
